// proto3記法であることを表している
syntax = "proto3";

package faq;

/*
   message命名規則(ベストプラクティスはどんなものだろう……)
 *Component : Request/Responseに用いるコンポーネント
 Faq[Action]Request : Action用リスエスト内容
 Faq[Action]Response : Action用レスポンス内容
*/

// FAQ
message FaqComponent {
    uint32 qid =1;
    uint32 share = 2;
    string service_name = 3;
    string lang = 4;
    string question = 5;
    string answer = 6;
}

// サーバーからのレスポンス(共通)
message ServerResponseComponent {
    bool is_success = 1;
    string message = 2;
}

// FAQを作成するときのリクエスト
message FaqCreateRequest {
    // この記載がダメなら、FaqComponentの内容を転記する
    repeated FaqComponent faqData = 1;
    string timestamp = 2;
}

// FAQを作成するときのレスポンス
// messageの中に別のmessageを含むことができる
message FaqCreateResponse {
    ServerResponseComponent response = 1;
    string timestamp = 2;
}

message FaqShowRequest {
    string timestamp = 1;
}

// repeated SOMETHING = SOMETHING[]
message FaqShowResponse {
    //message faqs {
        uint32 qid =2;
        uint32 share = 3;
        string service_name = 4;
        string lang = 5;
        string question = 6;
        string answer = 7;
    //}
    //repeated faqs faq = 1;
    //string timestamp = 8;
}

message FaqUpdateRequest {
    FaqComponent faq = 1;
    string timestamp = 2;
}

message FaqUpdateResponse {
    ServerResponseComponent response = 1;
    string timestamp = 2;
}

// ルーティング
service FaqGateway {
    rpc FaqCreate (FaqCreateRequest) returns (FaqCreateResponse) {}
    rpc FaqShow (FaqShowRequest) returns (FaqShowResponse) {};
    rpc FaqUpdate (FaqUpdateRequest) returns (FaqUpdateResponse) {}
}

